--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <title>Super Pacman</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="data:," >
+    <meta charset="UTF-8" >
+
 </head>
 
 <body class='mainPage'>
-    <div id='grid'>
-        <div id='pacman'>
+    <div id='grid' class="grid">
+        <div id='pacman' class="pacman">
         </div>
     </div>
 </body>
