--- a/index.html
+++ b/index.html
@@ -2,19 +2,31 @@
 <html>
 
 <head>
-    <title>Super Pacman</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="data:,">
     <meta charset="UTF-8">
-
 </head>
 
 <body class='mainPage'>
-    <div id='grid' class="grid">
-        <div id='pacman' class="pacman">
+    <div class='logo'>
+        <img src='assets/logo.png' />
+    </div>
+
+    <div class='menu'>
+        <img src='assets/pachead.png' />
+        <div class='links'>
+            <a href='play.html'>start game</a>
+            <a href='score.html'>scoreboard</a>
+            <a href='option.html'>options</a>
+            <a href='about.html'>about</a>
         </div>
     </div>
 </body>
+<script>
+    let intro = new Audio("./assets/intro.wav");
+    intro.play()
+</script>
 <script type="module" src='./main.js'></script>
 
 </html>
