in ptogress, add ghost

--- a/play.html
+++ b/play.html
@@ -14,12 +14,40 @@
     <div class="scoreBoard">
         <span id='score' class="score">Score: 0 Lives: 5 Time: 0m:0s</span>
     </div>
-<div id='grid' class="grid">
-         <div id='pacman' class="pacman" type=7>
-        <div class="pacman_eye"></div>
-        <div class="pacman_mouth"></div>
+    <div id='grid' class="grid">
+
+        <div id='pacman' class="pacman" type=7>
+            <div class="pacman_eye"></div>
+            <div class="pacman_mouth"></div>
+        </div>
+
+        <div class="ghost red">
+            <div class="left_eye"></div>
+            <div class="right_eye"></div>
+            <div class="mouth">
+            </div>
+        </div>
+
+        <div class="ghost pink">
+            <div class="left_eye"></div>
+            <div class="right_eye"></div>
+            <div class="mouth">
+            </div>
+        </div>
+        <div class="ghost orange">
+            <div class="left_eye"></div>
+            <div class="right_eye"></div>
+            <div class="mouth">
+            </div>
+
+        </div>
+        <div class="ghost cyan">
+            <div class="left_eye"></div>
+            <div class="right_eye"></div>
+            <div class="mouth">
+            </div>
+        </div>
     </div>
-</div>
 
     <div class='modal' id='modal'>
         <span id='stats' style='display:none'> </span>
@@ -33,12 +61,7 @@
         </div>
     </div>
 
-    <div class="ghost">
-        <div class="left_eye"></div>
-        <div class="right_eye"></div>
-        <div class="mouth">
-    </div>
-
 </body>
 <script type="module" src='./main.js'> </script>
+
 </html>
