--- a/play.html
+++ b/play.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class='modal' id='modal'>
-        <span id='stats' style='display:none'> </span>
+        <span id='stats'> </span>
         <a id='continue' style='display:none'> Continue </a>
         <a> Restart </a>
         <a> Main menu </a>
@@ -58,6 +58,12 @@
             <label>enter your name </label>
             <input type='text'> </input>
             <input type='submit' value='ok'> </input>
+        </div>
+        <div class="instruction">
+            How to Play?
+            Purpose in Game -> collect all coin and have 1 more life pacman
+            manage Pacman, ArrowKey: left, right, up, down
+            escape - pause game
         </div>
     </div>
 
