add scenario text

--- a/play.html
+++ b/play.html
@@ -59,6 +59,81 @@
             <input type='text'> </input>
             <input type='submit' value='ok'> </input>
         </div>
+
+        <div class="scene1">
+            //pacman + - как крестоносец, монеты - ковид, призраки мыши
+            ?/разный bg - на сцены
+            transalte - eng
+            score - очищеные улицы от вируса / Max 260, Not 2600 score
+            time - 1 age(min), 2 day(sec)
+            next - opacity - transiiton 2s
+            text in array -> control left/ right - next prev text
+            - show modal[lastElement]
+
+            1 В паралельной вселенной, есть такая планета 3.14Да, это двумерный мир со своими правилами и законами,
+            ее наслеяют разные сказочные обитатели, от лилипутов-жирафов до розовых единорогов и все они жили мирно и
+            счастливо, пока однажды не случилась беда.. next
+
+            На планету упал астероид - ученые начали выяснять, что это за объект. Проводя эксперементы и исследования,
+            выяснялось что на этом астероие находился мутирующий вирус next
+            прибыл он с другой планеты - Terra, но все это уже было поздно.. next
+
+            В течении 3 дней и 3 ночей, вирус смог заразить ученых и начал распространться по экспоненте.
+            Черное бремя наступило для сказочных обителей планеты 3.14Да next
+
+            Через время появились они... - те рыцари, спасатели, герои - прозвали их Пакман
+            что означает на древнем языке - беспощдный убийца летучих падонков. Или в простонародии - чистильщики next
+
+            Пакманы это бывшие военные, это те кому уже нечего терять, вирус заюрал их близких и родрных
+            Они сотрудничают с лабороторие 69, где изучается этот вирус и создается вакцина. next
+
+            В мире осталось не так много Пакманов, но те что есть, от города к городу, очищают
+            его от вируса... next
+            если повезет next
+            Их роль очистить город от вируса и вакцинировать всех зараженых next
+
+            Вирус превращал из любого кто попадался ему на пути - в огромную и сильную летучую мышь, помимо
+            физиологической деформации, вирус также завладевал разумом, что теперь зараженый становились рабом вируса.
+            next
+
+            Те же кто уже заразился - назывались летучими подонками. next
+
+            Зараженые интуитивно искали своих собратьев, обхвтаит их крыльями они крепко держали жертву
+            и целовали его в засос, так вирус и передовался, процесс был долгим и и мучительным.
+            //иммунка ?
+            Большинство городов поглотил этот вирус, но обители только надеются на своих спасителей..
+            Жители города надеются на тебя, и будут тебе помогать, дарую жизни и пропитание.
+            Теперь все в твоих руках..
+
+            1time
+            3 когда печеньки - вот вы нашли ящик с вакционой, Спутник V и теперь у вас выработлася имунитет
+            теперь вы можете лечить зараженых, но имейте ввиду, леча одного появится обязтально новые зараженые которые
+            будут патрулировать город
+            //next
+
+            1time
+            4.1 когда потерял жизнь -> 'но ничего страшного, тяу тяу тяу', местные верят в тебя и даруют тебе еще 1
+            жизнь, но помни, жизни ограничены.
+            next
+
+            //bg, image, - death, else -> sweet, happy etc
+            5.1 смерть ->
+            Все те жизни которые были даны Пакману, это души младецнов, ибо только их души способны даровать
+            жизнь... next
+            Обители города остались без надежды и теперь они будут умирать долго и мучительно от поцелуя летучих
+            подонков... next
+            Если только не придет новый чистильщик.. next
+
+            5.2 Win ->
+            Город очищен, местные счтасливы, зарженые обратно превратились в прежних существ next
+            рискую своей жизнью, дарит новую жизнь городу и его Жителям. next
+            Запомнят его как великим и бестстрагным спасителем и будут рассказывать своим внукам еще не 1 десяток лет..
+            Несколько дней продолжались гуляния на главной площади... next
+            но вот что тревожило Пакмана, что есть еще кучу
+            других городов, отдохнув и набравшився сил, Пакман
+            решил идти в следубщий город..
+        </div>
+
         <div class="instruction">
             How to Play?
             Purpose in Game -> collect all coin and have 1 more life pacman
