history step 2, add scenarios & picture

--- a/play.html
+++ b/play.html
@@ -52,20 +52,20 @@
     <div class='modal' id='modal'>
         <span id='stats'> </span>
         <a id='continue' style='display:none'> Continue </a>
-        <a> Restart </a>
-        <a> Main menu </a>
+        <a style='display:none'> Restart </a>
+        <a style='display:none'> Main menu </a>
         <div id='addScoreId' style='display:none'>
             <label>enter your name </label>
             <input type='text'> </input>
             <input type='submit' value='ok'> </input>
         </div>
-        <div class="scene"> </div>
-        <!-- <div class="instruction">
-            How to Play?
-            Purpose in Game -> collect all coin and have 1 more life pacman
-            manage Pacman, ArrowKey: left, right, up, down
-            escape - pause game
-        </div> -->
+
+        <div class="history-container">
+            <span></span>
+            <span class="faq"> Instruction: n - next, p - previus, s - skip, Play Game, arrows,
+                left/right/up/down, esc -
+                menu</span>
+        </div>
     </div>
 
 </body>
