history step 3, realize logic, shiow hide message depends condition

--- a/play.html
+++ b/play.html
@@ -62,9 +62,8 @@
 
         <div class="history-container">
             <span></span>
-            <span class="faq"> Instruction: n - next, p - previus, s - skip, Play Game, arrows,
-                left/right/up/down, esc -
-                menu</span>
+            <span class="faq"> Инструкция: N - далее, P - предыдущий, Space - Пропустить. Управление: Влево - A
+                Вправо - D Вверх - W Вниз - S, Меню - Esc</span>
         </div>
     </div>
 
