--- a/play.html
+++ b/play.html
@@ -12,7 +12,7 @@
 
     <div id='notify' class='notify'> Click arrow key, for start game! </div>
     <div class="scoreBoard">
-        <span id='score' class="score">Score: 0 Lives: 5 Time: 0m:0s</span>
+        <span id='score' class="score">Score: 0 Lives: 5 Time: 0months:0days</span>
     </div>
     <div id='grid' class="grid">
 
