add some feature, fix some bugs

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     let intro = new Audio("./assets/intro.wav");
     intro.play()
 </script>
-<script type="module" src='./main.js'></script>
+<script src='./main.js' type="module"></script>
 
 </html>
