--- a/play.html
+++ b/play.html
@@ -68,6 +68,6 @@
     </div>
 
 </body>
-<script type="module" src='./main.js'> </script>
+<script src='./main.js' type="module"> </script>
 
 </html>
