try fix bug -> toggle menu

--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
 
     <div class='modal' id='modal'>
         <span id='stats'> </span>
-        <a id='continue' style='display:none'> Continue </a>
-        <a style='display:none'> Restart </a>
-        <a style='display:none'> Main menu </a>
+
+        <div class="gameMenu">
+            <a id='continue'> Continue </a>
+            <a> Restart </a>
+            <a> Main menu </a>
+        </div>
+
         <div id='addScoreId' style='display:none'>
             <label>enter your name </label>
             <input type='text'> </input>
@@ -67,6 +71,7 @@
         </div>
         <!-- //menu -->
         <div class="mainPage">
+
             <div class='logo'>
                 <img src='assets/logo.png' />
             </div>
@@ -80,7 +85,6 @@
                     <a href='about.html'>about</a>
                 </div>
             </div>
-
         </div>
 
     </div>
