fix some bugs, opmize functions

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         </div>
 
         <div class="history-container">
-            <span></span>
+            <img width="800" height="500" src="" alt="">
+            <span> </span>
             <span class="faq"> Инструкция: N - далее, P - предыдущий, Space - Пропустить. Управление: Влево - A
                 Вправо - D Вверх - W Вниз - S, Меню - Esc</span>
         </div>
