fix bug: slider next, prev

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="history-container">
-            <img width="800" height="500" src="" alt="">
+            <img  src="" alt="">
             <span> </span>
             <span class="faq"> Инструкция: N - далее, P - предыдущий, Space - Пропустить. Управление: Влево - A
                 Вправо - D Вверх - W Вниз - S, Меню - Esc</span>
