key ref -> code, audio scenario fix, audio prev repeated fix, chomp disable, time fixed like day, montht

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id='notify' class='notify'> Click arrow key, for start game! </div>
     <div class="scoreBoard">
-        <span id='score' class="score">Score: 0 Lives: 5 0 months days 0</span>
+        <span id='score' class="score">Score:0 Lives:5 months:0 days:0</span>
     </div>
     <div id='grid' class="grid">
 
