--- a/client/score.html
+++ b/client/score.html
@@ -10,6 +10,8 @@
 
 <body>
     score players
+    Rank| Name | Score  | time
+    get data, show data all palyers
 </body>
-
+<script type="module" src='./statics/main.js'> </script>
 </html>
