try fix web worker

--- a/client/index.html
+++ b/client/index.html
@@ -9,79 +9,7 @@
 </head>
 
 <body>
-
-    <div id='notify' class='notify'>Нажми на кнопку(wsad), что бы начать игру</div>
-    <div class="scoreBoard">
-        <span id='score' class="score">Вирусы:0 Жизни:5 Месяц:0 Дни:0</span>
-    </div>
-    <div id='grid' class="grid">
-
-        <div id='pacman' class="pacman" type=7>
-            <div class="pacman_eye"></div>
-            <div class="pacman_mouth"></div>
-        </div>
-
-        <div class="ghost red">
-            <div class="left_eye"></div>
-            <div class="right_eye"></div>
-            <div class="mouth">
-            </div>
-        </div>
-
-        <div class="ghost pink">
-            <div class="left_eye"></div>
-            <div class="right_eye"></div>
-            <div class="mouth">
-            </div>
-        </div>
-        <div class="ghost orange">
-            <div class="left_eye"></div>
-            <div class="right_eye"></div>
-            <div class="mouth">
-            </div>
-        </div>
-        <div class="ghost cyan">
-            <div class="left_eye"></div>
-            <div class="right_eye"></div>
-            <div class="mouth">
-            </div>
-        </div>
-    </div>
-
-    <div class='modal' id='modal'>
-        <span id='stats'> </span>
-        <div class="gameMenu">
-            <a id='continue'>Продолжить </a>
-            <a>Рестарт </a>
-            <a>Меню</a>
-        </div>
-        <div class='addScore' style='display:none'>
-            <label> Введи имя:  </label>
-            <input type='text'/>
-            <input type='submit' value='Сохранить'/>
-        </div>
-        <div class="history-container">
-            <img  src="" alt="">
-            <span> </span>
-            <span class="faq"> Инструкция: N - далее, P - предыдущий, Space - Пропустить. Управление: Влево - A
-                Вправо - D Вверх - W Вниз - S, Меню - Esc</span>
-        </div>
-        <!-- //menu -->
-        <div class="mainPage">
-            <div class='logo'>
-                <img src='./statics/assets/logo.png' />
-            </div>
-            <div class='menu'>
-                <img src='./statics/assets/pachead.png' />
-                <div class='links'>
-                    <a>Начать игру</a>
-                    <a href='./score.html'>Скала предков</a>
-                    <a href='./option.html'>Настройки</a>
-                    <a href='./about.html'>Об игре</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id='app'></div>
 </body>
 <script type="module" src='./statics/main.js'> </script>
 </html>
