--- a/client/score.html
+++ b/client/score.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Score Page</title>
 </head>
 
 <body>
+<div class='test'> 
     score players
     Rank| Name | Score  | time
     get data, show data all palyers
+</div>
 </body>
 <script type="module" src='./statics/main.js'> </script>
 </html>
