--- a/client/index.html
+++ b/client/index.html
@@ -11,5 +11,5 @@
 <body>
     <div id='app'></div>
 </body>
-<script type="module" src='./statics/main.js'> </script>
+<script type="module" src='./statics/index.js'> </script>
 </html>
